tenzir/integration/data/reference/pipelines_local/test_print_multiple_events/step_01.ref
error: field c is not of type record
 --> <input>:1:30
  |
1 | read json | repeat 2 | print a.b.c json
  |                              ^^^^^ 
  |